--- a/Hemsidan/LogicLayer/LogicLayer.csproj
+++ b/Hemsidan/LogicLayer/LogicLayer.csproj
@@ -78,11 +78,15 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="CustomUserStore.cs" />
     <Compile Include="IdentityConfig.cs" />
+    <Compile Include="Models\Chore.cs" />
+    <Compile Include="Models\Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
